# detlibc

./: .gitignore  Makefile.am  README  README-hacking  README-prereq  autogen.sh  bootstrap.conf  configure.ac  index.html
det/: Makefile.am  buffer.c  daemon.c  error.c  libdet.map  signal.c  socket.c  socket_un.c  system.h  utils.c
gl/: Makefile.am
gl/gnu/: .gitignore  Makefile.am
gl/m4/: gnulib-cache.m4
gl/tests/: .gitignore  Makefile.am
include/: Makefile.am
include/det/: Makefile.am  buffer.h  common.h  daemon.h  debug.h  error.h  signal.h  socket.h  socket_un.h  utils.h
lib/: Makefile.am
lib/common/: Makefile.am  common.h
lib/det/: Makefile.am  common.h
m4/: .gitignore  det_args.m4
src/: .gitignore  Makefile.am  fatest.c
tests/: .gitignore  Makefile.am  atlocal.in  buffer-fread-all.at  check_buffer.c  err-dump.at  err-exit.at  err-msg.at  err-quit.at  err-ret.at  err-sys.at  local.at  sock-sig.at  test-buffer-fread-all.c  test-data-hex.c  test-err-dump.c  test-err-exit.c  test-err-msg.c  test-err-quit.c  test-err-ret.c  test-err-sys.c  test-socket-signal.c  testsuite.at
